added status history
